--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "moodmate-fullstack",
   "version": "1.0.0",
   "scripts": {
-    "start": "cd backend && npm start",
-    "heroku-postbuild": "cd client && npm install && npm run build && cd ../backend && npm install"
+    "build": "cd client && npm install && npm run build && cd ../backend && npm install",
+    "start": "cd backend && npm run dev"
   }
 }
