--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "scripts": {
      "build": "cd client && npm install && npm run build && cd ../backend && npm install",
-  "start": "cd backend && node index.js"
+  "start": "cd backend && node index.js",
+   "heroku-postbuild": "cd frontend && npm install && npm run build"
   }
 }
